# FoDiKAN

./: README.md  pyproject.toml  requirements-core.txt  requirements-kan.txt  requirements.txt
appendix_data/: appendix_d_fold_archive.csv
appendix_data/appendix_data/: MANIFEST.md  appendix_e_consensus_gene_sets.csv  appendix_e_significant_enrichment_outputs.csv
scripts/: run_experiment.py
src/fodikan/: __init__.py  config.py  pipeline.py
src/fodikan/data/: cv.py  io.py  loaders.py
src/fodikan/diffusion/: augment.py  model.py
src/fodikan/evaluation/: alignment.py
src/fodikan/features/: selection.py
src/fodikan/models/: __init__.py  baselines.py  chebyshev_kan.py  kan.py  mlp.py
src/fodikan/results/: reporting.py
src/fodikan/training/: torch_trainer.py
src/fodikan/utils/: logging.py  repro.py
