[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fodikan"
version = "0.1.0"
description = "FoDiKAN experiment runner with SMOTE-family augmentation, KAN backbones, and integrated MLP controls."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
