[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FoDiKAN"
version = "0.2.0"
description = "Modular FoDiKAN pipeline with balanced baselines, ChebyshevKAN, and TabDDPM support."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
